Criando estrutura HTML básica

--- a/inbound-marketing/index.html
+++ b/inbound-marketing/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="./images/" alt="ProntoCloud" />
+    <img src="./images/logo-demo.png" alt="Inbound Marketing" />
   </header>
   
   <section>
