inicio exercicio inbound marketing

--- a/inbound-marketing/index.html
+++ b/inbound-marketing/index.html
@@ -12,6 +12,14 @@
   </header>
   
   <section>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Sobre nós</a></li>
+        <li><a href="#">Tenho interesse</a></li>
+      </ul>
+    </nav>
+    
     <article>
       <h1>Como o Inbound Marketing pode ajudar a sua empresa a crescer</h1>
     
